# python-palindromes

./: Makefile  README.md  pyproject.toml  setup.py
palindromes/: __init__.py  corpus_stats.py  cursor.c  cursor.pxd  cursor.pyx  dicttree.c  dicttree.pxd  dicttree.pyx  dtutils.py  generator.py  palindrome_walk.py  space.py
palindromes/dicts/: best_palindromes.txt  compile_master_dict.py  excluded.dict  master.dict  most_frequent.dict  most_frequent_filtered.dict
palindromes/resources/dicts/: compile_most_frequent_words_dict.py
test/: graph_layout_demo.py  unittest_cursor.py  unittest_dicttree.py
